--- a/klippy/extras/display/menu.cfg
+++ b/klippy/extras/display/menu.cfg
@@ -469,6 +469,30 @@ gcode:
 type: list
 name: Temperature
 
+[menu __main __temp __preheat]
+type: command
+name: Preheat
+gcode:
+    M140 S50
+    M104 S210
+
+[menu __main __temp __preheat_hotend]
+type: command
+name: Preheat hotend
+gcode: M104 S210
+
+[menu __main __temp __preheat_bed]
+type: command
+name: Preheat bed
+gcode: M140 S50
+
+[menu __main __temp __cooldown]
+type: command
+name: Cooldown
+gcode:
+    M104 S0
+    M140 S0
+
 [menu __main __temp __hotend0_target]
 type: input
 enable: {('extruder' in printer) and ('extruder' in printer.heaters.available_heaters)}
@@ -498,78 +522,6 @@ input_min: 0
 input_max: {printer.configfile.config.heater_bed.max_temp}
 input_step: 1
 gcode: M140 S{'%.0f' % menu.input}
-
-[menu __main __temp __preheat_pla]
-type: list
-name: Preheat PLA
-
-[menu __main __temp __preheat_pla __all]
-type: command
-enable: {('extruder' in printer) and ('heater_bed' in printer)}
-name: Preheat all
-gcode:
-    M140 S60
-    M104 S200
-
-[menu __main __temp __preheat_pla __hotend]
-type: command
-enable: {'extruder' in printer}
-name: Preheat hotend
-gcode: M104 S200
-
-[menu __main __temp __preheat_pla __hotbed]
-type: command
-enable: {'heater_bed' in printer}
-name: Preheat hotbed
-gcode: M140 S60
-
-[menu __main __temp __preheat_abs]
-type: list
-name: Preheat ABS
-
-[menu __main __temp __preheat_abs __all]
-type: command
-enable: {('extruder' in printer) and ('heater_bed' in printer)}
-name: Preheat all
-gcode:
-    M140 S110
-    M104 S245
-
-[menu __main __temp __preheat_abs __hotend]
-type: command
-enable: {'extruder' in printer}
-name: Preheat hotend
-gcode: M104 S245
-
-[menu __main __temp __preheat_abs __hotbed]
-type: command
-enable: {'heater_bed' in printer}
-name: Preheat hotbed
-gcode: M140 S110
-
-[menu __main __temp __cooldown]
-type: list
-name: Cooldown
-
-[menu __main __temp __cooldown __all]
-type: command
-enable: {('extruder' in printer) and ('heater_bed' in printer)}
-name: Cooldown all
-gcode:
-    M104 S0
-    M140 S0
-
-[menu __main __temp __cooldown __hotend]
-type: command
-enable: {'extruder' in printer}
-name: Cooldown hotend
-gcode: M104 S0
-
-[menu __main __temp __cooldown __hotbed]
-type: command
-enable: {'heater_bed' in printer}
-name: Cooldown hotbed
-gcode: M140 S0
 
 ### menu filament ###
 
