tweaks to temperature menu

--- a/klippy/extras/display/menu.cfg
+++ b/klippy/extras/display/menu.cfg
@@ -469,21 +469,19 @@ gcode:
 type: list
 name: Temperature
 
-[menu __main __temp __preheat]
-type: command
-name: Preheat
-gcode:
-    M140 S50
-    M104 S210
-
 [menu __main __temp __preheat_hotend]
 type: command
-name: Preheat hotend
+name: Preheat end 210
 gcode: M104 S210
+
+[menu __main __temp __preheat_hotend_partial]
+type: command
+name: Preheat end 150
+gcode: M104 S150
 
 [menu __main __temp __preheat_bed]
 type: command
-name: Preheat bed
+name: Preheat bed 50
 gcode: M140 S50
 
 [menu __main __temp __cooldown]
